test/fixtures/compile/parameter/parameter.call.xy=e.ie.error
SyntaxError: Expecting ",", ")" or "NewLine" but got "%" (/Users/baptiste/Development/Projects/Kaoscript/kaoscript/test/fixtures/compile/parameter/parameter.call.xy=e.ie.ks:1:15)