test/fixtures/compile/parameter/parameter.call.xy=e.ie.ks
func foobar(_ % x) {
	return 1
}

foobar(1)